--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>HAPPY BIRTHDAY!!!</title>
 </head>
 <body>
-    
+    <header>
+        <h1>HAPPY BIRTHDAY</h1>
+    </header>
+    <div class="card">
+        <a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus dignissimos a dolores, velit aut ut laboriosam repudiandae, harum ducimus beatae aliquam expedita provident odio cumque! Expedita quas consequuntur quibusdam nam?</a>
+    </div>
+    <footer>
+        <a href="">tes weh</a>
+    </footer>
 </body>
 </html>
