--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <title>HAPPY BIRTHDAY!!!</title>
 </head>
 <body>
@@ -11,10 +15,12 @@
         <h1>HAPPY BIRTHDAY</h1>
     </header>
     <div class="card">
-        <a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus dignissimos a dolores, velit aut ut laboriosam repudiandae, harum ducimus beatae aliquam expedita provident odio cumque! Expedita quas consequuntur quibusdam nam?</a>
+        <a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus dignissimos a dolores, velit aut ut laboriosam repudiandae, harum ducimus beatae aliquam expedita provident odio cumque! Expedita quas consequuntur quibusdam nam?
+            <span class="ribbon"><333</span>
+        </a>
     </div>
-    <footer>
-        <a href="">tes weh</a>
-    </footer>
+    <div class="gift">
+        <img src="assets/istockphoto-864164904-612x612.png" alt="present">
+    </div>
 </body>
 </html>
