--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
         <h1>HAPPY BIRTHDAY</h1>
     </header>
     <div class="card">
-        <a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus dignissimos a dolores, velit aut ut laboriosam repudiandae, harum ducimus beatae aliquam expedita provident odio cumque! Expedita quas consequuntur quibusdam nam?
-            <span class="ribbon"><333</span>
-        </a>
+        <p style="text-align: right;">12 March 2024</p>
+        <p style="font-size: large;">Dearest Girlfriend,</p>
+        <p style="text-indent: 20px;">Happy birthday!!! Wish you all the best! cieee 16 tahun (kolot aowkaokwoak, gpp ketang kolotan aku). Panjang umur, semogaa kamu makin happy, ga boleh sedih sedih yah, makin semangat, ga boleh horeaman awas siah, intinya mah jadi lebih baikkk. ku sengaja bikinnya dalam bentuk web biar beda dari yang lain dan jadi yang satu-satunya yang beda, I love youu ehehehehehhehe <3</p>
+        <span class="ribbon"><333</span>
+        <p style="text-align: right;margin-bottom: 0;">much love,</p>
+        <p class="initial" style="text-align: right;margin: 0px;">GZ</p>
     </div>
     <div class="gift">
         <img src="assets/istockphoto-864164904-612x612.png" alt="present">
